--- a/QGIS/mws_index1.html
+++ b/QGIS/mws_index1.html
@@ -31,8 +31,7 @@
         }).addTo(map);
 
         // Fetch the GeoJSON data from the external file
-        fetch('https://raw.githubusercontent.com/darshanacw/darshanacw.github.io/main/QGIS/mws_4326.geojson
-')
+        fetch('https://raw.githubusercontent.com/darshanacw/darshanacw.github.io/main/QGIS/mws_4326.geojson')
             .then(response => response.json())
             .then(data => {
                 // Add the GeoJSON layer to the map
