--- a/FLID/Index.html
+++ b/FLID/Index.html
@@ -21,11 +21,11 @@
         }
         #sliderContainer {
             position: absolute;
-            bottom: 10px;
-            right: 10px;
+            bottom: 220px;
+            right: 50px;
             z-index: 1000;
             background: white;
-            padding: 10px;
+            padding: 4px;
             border-radius: 8px;
         }		
     </style>
@@ -65,7 +65,7 @@
 
 <script>
 // Initialize map and base layers
-let map = L.map("map").setView([12.5657, 104.9910], 6);
+let map = L.map("map").setView([16, 104], 5.4);
 let osmLayer = L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png");
 let esriLayer = L.tileLayer("https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}").addTo(map);
 let tileServerLayer = L.tileLayer('https://raw.githubusercontent.com/darshanacw/darshanacw.github.io/main/FLID/Tile/{z}/{x}/{y}.png', {
@@ -84,6 +84,27 @@ document.getElementById('opacitySlider').addEventListener('input', function(e) {
     tileServerLayer.setOpacity(e.target.value);
 });
 
+const baseLayers = {
+    "Open Street Map": osmLayer,
+    "ESRI Satellite View": esriLayer
+};
+
+const overlays = {
+    "FLID Suitable Area": tileServerLayer
+};
+
+// Add layer control to map
+L.control.layers(baseLayers, overlays).addTo(map);
+
+
+
+// Check the checkbox by default
+document.getElementById("layerCheckbox").checked = true;
+
+
+
+// Add the FLID Suitable Area layer to the map by default
+tileServerLayer.addTo(map);
 // Toggle FLID Suitable Area layer on checkbox toggle
 document.getElementById("layerCheckbox").addEventListener("change", function () {
     if (this.checked) {
