--- a/FLID/Index.html
+++ b/FLID/Index.html
@@ -55,7 +55,7 @@ body, html {
 <body>
 
 <div class="header">
-    <h1>Farmer-Led Irrigated Area Mapping – ASEAN</h1>
+    <h1>Farmer-Led Irrigated Potential Area Mapping – ASEAN</h1>
     <label><input type="checkbox" id="layerCheckbox"> FLID Suitable Area</label>
     <select id="countryDropdown" class="dropdown" onchange="loadAdminData();">
         <option value="">Select Country</option>
@@ -73,7 +73,7 @@ body, html {
 <div id="map"></div>
 
 <div class="footer">
-    © 2024 Farmer-Led Irrigated Area Mapping Project
+    © 2024 Farmer-Led Irrigated Potential Area Mapping Project
 </div>
 
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
