--- a/FLID/Index.html
+++ b/FLID/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farmer-Led Irrigated Area Mapping – ASEAN</title>
+    <title>Farmer-Led Irrigation Area Mapping – ASEAN</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <style>
 /* Ensure the body and html take up the full screen height */
@@ -73,7 +73,7 @@ body, html {
 <div id="map"></div>
 
 <div class="footer">
-    © 2024 Farmer-Led Irrigated Potential Area Mapping Project
+    © 2024 Farmer-Led Irrigation Potential Area Mapping Project
 </div>
 
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
