--- a/FLID/Index.html
+++ b/FLID/Index.html
@@ -55,7 +55,7 @@ body, html {
 <body>
 
 <div class="header">
-    <h1>Farmer-Led Irrigated Potential Area Mapping – ASEAN</h1>
+    <h1>Farmer-Led Irrigation Potential Area Mapping – ASEAN</h1>
     <label><input type="checkbox" id="layerCheckbox"> FLID Suitable Area</label>
     <select id="countryDropdown" class="dropdown" onchange="loadAdminData();">
         <option value="">Select Country</option>
