--- a/FLID/Index.html
+++ b/FLID/Index.html
@@ -117,7 +117,7 @@ const overlays = {
     "FLID Suitable Area": tileServerLayer
 };
 
-const overlays = {
+const cropoverlays = {
     "Crop Suitable Area": croptileServerLayer
 };
 // URLs and names for GeoJSON files
@@ -163,6 +163,7 @@ function addGeoJSONLayer(url, name) {
         }
       });
       overlays[name] = layer;               // Add each layer to overlays object
+	  cropoverlays[name] = layer;               // Add each layer to overlays object
       layerControl.addOverlay(layer, name); // Add layer to control with its name
     })
     .catch(error => console.error('Error loading GeoJSON:', error));
@@ -172,7 +173,7 @@ function addGeoJSONLayer(url, name) {
 geojsonUrls.forEach(item => addGeoJSONLayer(item.url, item.name));
 
 // Initialize the layer control and add it to the map
-let layerControl = L.control.layers(baseLayers, overlays, { position: 'topleft' }).addTo(map);
+let layerControl = L.control.layers(baseLayers, overlays,cropoverlays, { position: 'topleft' }).addTo(map);
 // Add layer control to map
 //L.control.layers(baseLayers, overlays).addTo(map);
 
