--- a/FLID/Index.html
+++ b/FLID/Index.html
@@ -115,12 +115,11 @@ const baseLayers = {
 };
 
 const overlays = {
-    "FLID Suitable Area": tileServerLayer
+    "FLID Suitable Area": tileServerLayer,
+	"Crop Suitable Area": croptileServerLayer
 };
 
-const cropoverlays = {
-    "Crop Suitable Area": croptileServerLayer
-};
+
 // URLs and names for GeoJSON files
 const geojsonUrls = [
   { url: 'https://raw.githubusercontent.com/darshanacw/darshanacw.github.io/main/FLID/GT/IRRI_AREA_2014_lao.geojson', name: 'IRRI Area 2014 (Lao)' },
