--- a/FLID/Index.html
+++ b/FLID/Index.html
@@ -581,7 +581,7 @@ document.getElementById("admin3Dropdown").addEventListener("change", function ()
         div.innerHTML = `<img src="https://raw.githubusercontent.com/darshanacw/darshanacw.github.io/main/FLID/Legend.jpg" alt="Legend2" style="width: 250px;">`;
         return div;
     };
-    legend.addTo(map);
+    legend2.addTo(map);
 </script>
 
 </body>
