--- a/FLID/Index.html
+++ b/FLID/Index.html
@@ -81,7 +81,7 @@ body, html {
     /* Contact Button */
     #contactBtn {
       position: fixed;
-      bottom: 30px;
+      top: 30px;
       right: 30px;
       background-color: #1E90FF;
       color: white;
