--- a/FLID/Index.html
+++ b/FLID/Index.html
@@ -98,7 +98,7 @@ body, html {
       position: fixed;
       right: -360px;
       top: 0;
-      height: 100%;
+      height: 85%;
       width: 340px;
       background-color: #ffffff;
       box-shadow: -2px 0 8px rgba(0,0,0,0.3);
@@ -136,15 +136,22 @@ body, html {
       color: #555;
     }
 
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      box-sizing: border-box;
-      font-size: 14px;
-    }
+#contactPanel input,
+#contactPanel textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+
+@media (max-width: 500px) {
+  #contactPanel {
+    width: 100%;
+  }
+}
 
     input[type="submit"] {
       background-color: #1E90FF;
