--- a/FLID/Index.html
+++ b/FLID/Index.html
@@ -703,7 +703,9 @@ document.getElementById("admin3Dropdown").addEventListener("change", function ()
     <p><strong>Name:</strong><br> Dr. Mansoor Leh</p>
     <p><strong>Email:</strong><br> <a href="mailto:m.leh@cgiar.org">m.leh@cgiar.org</a></p>
     <p><strong>Phone:</strong><br> +94112880000 Ext. 2220</p>
-    <p><strong>Address:</strong><br> International Water Management Institute </p>
+    <p><strong>Address:</strong><br> International Water Management Institute,<br> 127 Sunil Mawatha, Battaramulla 10120, Sri Lanka</p>
+
+	  
 	
     <h3 style="margin-top:30px;">Send us a Message</h3>
     <form action="mailto:m.leh@cgiar.org" method="post" enctype="text/plain">
