--- a/FLID/Index.html
+++ b/FLID/Index.html
@@ -81,7 +81,7 @@ body, html {
     /* Contact Button */
     #contactBtn {
       position: fixed;
-      top: 30px;
+      top: 50px;
       right: 30px;
       background-color: #1E90FF;
       color: white;
@@ -703,7 +703,7 @@ document.getElementById("admin3Dropdown").addEventListener("change", function ()
     <p><strong>Name:</strong><br> Dr. Mansoor Leh</p>
     <p><strong>Email:</strong><br> <a href="mailto:m.leh@cgiar.org">m.leh@cgiar.org</a></p>
     <p><strong>Phone:</strong><br> +94112880000 Ext. 2220</p>
-    <p><strong>Address:</strong><br> International Water Management Institute,<br> 127 Sunil Mawatha, Battaramulla 10120, Sri Lanka</p>
+    <p><strong>Address:</strong><br> International Water Management Institute ( IWMI ),<br> 127 Sunil Mawatha, Battaramulla 10120, Sri Lanka</p>
 
 	  
 	
