--- a/FLID/Index.html
+++ b/FLID/Index.html
@@ -703,7 +703,7 @@ document.getElementById("admin3Dropdown").addEventListener("change", function ()
     <p><strong>Name:</strong><br> Dr. Mansoor Leh</p>
     <p><strong>Email:</strong><br> <a href="mailto:m.leh@cgiar.org">m.leh@cgiar.org</a></p>
     <p><strong>Phone:</strong><br> +94112880000 Ext. 2220</p>
-    <p><strong>Address:</strong><br> International Water Management Institute ( IWMI ),<br> 127 Sunil Mawatha, Battaramulla 10120, Sri Lanka</p>
+    <p><strong>Address:</strong><br> International Water Management Institute ( IWMI ),<br> 127 Sunil Mawatha,<br> Battaramulla 10120,<br> Sri Lanka</p>
 
 	  
 	
