--- a/Season/index.html
+++ b/Season/index.html
@@ -158,7 +158,7 @@
       //"https://raw.githubusercontent.com/darshanacw/darshanacw.github.io/main/Season/P30_union_n_peak_start_end_months_multi_land_mean_wet_dry_elem25_25_AFRC.geojson",
       //"https://raw.githubusercontent.com/darshanacw/darshanacw.github.io/main/Season/P30_union_n_peak_start_end_months_multi_land_mean_wet_dry_elem25_25_OCNA.geojson",
       //"https://raw.githubusercontent.com/darshanacw/darshanacw.github.io/main/Season/P30_union_n_peak_start_end_months_multi_land_mean_wet_dry_elem25_25_URASA.geojson",
-"https://raw.githubusercontent.com/darshanacw/darshanacw.github.io/main/Season/P30_number_of_peaks_start_end_mean_ele.geojson",
+"https://raw.githubusercontent.com/darshanacw/darshanacw.github.io/main/Season/P30_number_of_peaks_start_end_mean_et.geojson",
 
 	  
       // add more URLs here for your grid GeoJSONs, e.g.
@@ -193,7 +193,7 @@ Promise.all(geojsonUrls.map(url => fetch(url).then(res => res.json())))
 layer.on('click', function () {
   const props = feature.properties;
   const months = Array.from({ length: 12 }, (_, i) => props[`Month_${i + 1}`] || 0);
-  const etValues = Array.from({ length: 12 }, (_, i) => props[`Month_${i + 1}`] || 0);
+  const etValues = Array.from({ length: 12 }, (_, i) => props[`et_${i + 1}`] || 0);
 
   const peakAttributes = ['Wet1', 'Dry1', 'Wet2', 'Dry2'];
   const peakAnnotations = peakAttributes
