--- a/Season/index.html
+++ b/Season/index.html
@@ -229,8 +229,10 @@ layer.on('click', function () {
           {
             label: 'ET₀ (Evapotranspiration)',
             data: etValues,
-            borderColor: 'rgba(255, 99, 132, 1)',
-            backgroundColor: 'rgba(255, 99, 132, 0.2)',
+            //borderColor: 'rgba(255, 99, 132, 1)',
+            //backgroundColor: 'rgba(255, 99, 132, 0.2)',
+	    borderColor: 'rgba(75, 192, 192, 1)',       // solid greenish-teal
+            backgroundColor: 'rgba(75, 192, 192, 0.2)'  // light transparent greenish-teal
             type: 'line',
             fill: false,
             yAxisID: 'y',
