--- a/Season/index.html
+++ b/Season/index.html
@@ -227,7 +227,7 @@ layer.on('click', function () {
             type: 'bar'
           },
           {
-            label: 'ET₀ (Evapotranspiration)',
+            label: 'ET (Evapotranspiration)',
             data: etValues,
             //borderColor: 'rgba(255, 99, 132, 1)',
             //backgroundColor: 'rgba(255, 99, 132, 0.2)',
