--- a/Season/index.html
+++ b/Season/index.html
@@ -101,6 +101,8 @@
         if (value === 1) return 'red';
         else if (value === 2) return 'blue';		
         else if (value === 3) return 'yellow';
+	else if (value === 0) return 'beige';
+	else if (value === 6) return 'pink';
         else return 'gray';
       } else {
         if (value >= 1 && value <= 12) return monthColors[value - 1];
@@ -134,7 +136,7 @@
         const div = L.DomUtil.create('div', 'info legend');
         div.innerHTML += `<strong>${attribute}</strong><br>`;
 
-        if (attribute === 'p_number') {
+        if (attribute === 'p_number') {	
           div.innerHTML += `<i style="background: red"></i> 1 <br>`;		
           div.innerHTML += `<i style="background: blue"></i> 2<br>`;
           div.innerHTML += `<i style="background: yellow"></i> 3<br>`;
