--- a/Season/index2.html
+++ b/Season/index2.html
@@ -55,7 +55,7 @@
 <body>
 
   <select id="attributeSelector">
-    <option value="p_number">Number of rainy seasons</option>
+    <option value="zone">Number of rainy seasons</option>
     <option value="Wet1">Starting month of first rainy season</option>
     <option value="Wet2">Starting month of second rainy season</option>
     <option value="Dry1">Starting month of first dry season</option>
@@ -137,12 +137,13 @@
         const div = L.DomUtil.create('div', 'info legend');
         div.innerHTML += `<strong>${attribute}</strong><br>`;
 
-        if (attribute === 'p_number') {	
-	  div.innerHTML += `<i style="background: beige"></i> 0 <br>`;		
-          div.innerHTML += `<i style="background: red"></i> 1 <br>`;		
-          div.innerHTML += `<i style="background: blue"></i> 2<br>`;
-          div.innerHTML += `<i style="background: yellow"></i> 3<br>`;
-	  div.innerHTML += `<i style="background: pink"></i> 5 <br>`;	
+        if (attribute === 'zone') {	
+	  div.innerHTML += `<i style="background: beige"></i> 'Semi-arid' <br>`;		
+		div.innerHTML += `<i style="background: green"></i> 'Arid' <br>`;	
+          div.innerHTML += `<i style="background: red"></i> 'one rainy season' <br>`;		
+          div.innerHTML += `<i style="background: blue"></i> 'Two rainy seasons'<br>`;
+          div.innerHTML += `<i style="background: yellow"></i> 'Three rainy seasons'<br>`;
+	  div.innerHTML += `<i style="background: pink"></i> 'Hyper-arid' <br>`;	
         } else {
           for (let i = 1; i <= 12; i++) {
             div.innerHTML += `<i style="background: ${monthColors[i - 1]}"></i> ${i}<br>`;
