--- a/Season/index2.html
+++ b/Season/index2.html
@@ -138,12 +138,13 @@
         div.innerHTML += `<strong>${attribute}</strong><br>`;
 
         if (attribute === 'zone') {	
-	  div.innerHTML += `<i style="background: beige"></i> 'Semi-arid' <br>`;		
-		div.innerHTML += `<i style="background: green"></i> 'Arid' <br>`;	
-          div.innerHTML += `<i style="background: red"></i> 'one rainy season' <br>`;		
-          div.innerHTML += `<i style="background: blue"></i> 'Two rainy seasons'<br>`;
-          div.innerHTML += `<i style="background: yellow"></i> 'Three rainy seasons'<br>`;
-	  div.innerHTML += `<i style="background: pink"></i> 'Hyper-arid' <br>`;	
+
+      div.innerHTML += `<i style="background: red"></i> one rainy season <br>`;		
+      div.innerHTML += `<i style="background: blue"></i> Two rainy seasons<br>`;
+      div.innerHTML += `<i style="background: yellow"></i> Three rainy seasons<br>`;
+	  div.innerHTML += `<i style="background: beige"></i> Semi-arid <br>`;		
+	  div.innerHTML += `<i style="background: green"></i> Arid <br>`;	
+	  div.innerHTML += `<i style="background: pink"></i> Hyper-arid <br>`;	
         } else {
           for (let i = 1; i <= 12; i++) {
             div.innerHTML += `<i style="background: ${monthColors[i - 1]}"></i> ${i}<br>`;
