--- a/Season/index2.html
+++ b/Season/index2.html
@@ -98,12 +98,12 @@
 
     function getColor(attribute, value) {
       if (attribute === 'zone') {
-        if (value === 'one rainy season') return 'red';
-        else if (value === 'Two rainy seasons') return 'blue';		
-        else if (value === 'Three rainy seasons') return 'yellow';
-	else if (value === 'Semi-arid') return 'beige';
-	else if (value === 'Arid') return 'green';    
-	else if (value === 'Hyper-arid') return 'pink';
+        if (value === 'one rainy season') return '#1f78b4';
+        else if (value === 'Two rainy seasons') return '#33a02c';		
+        else if (value === 'Three rainy seasons') return '#6a3d9a';
+	else if (value === 'Semi-arid') return '#fdbf6f';
+	else if (value === 'Arid') return '#fdbf6f';    
+	else if (value === 'Hyper-arid') return '#fdbf6f';
         else return 'gray';
       } else {
         if (value >= 1 && value <= 12) return monthColors[value - 1];
@@ -139,12 +139,12 @@
 
         if (attribute === 'zone') {	
 
-      div.innerHTML += `<i style="background: red"></i> one rainy season <br>`;		
-      div.innerHTML += `<i style="background: blue"></i> Two rainy seasons<br>`;
-      div.innerHTML += `<i style="background: yellow"></i> Three rainy seasons<br>`;
-	  div.innerHTML += `<i style="background: beige"></i> Semi-arid <br>`;		
-	  div.innerHTML += `<i style="background: green"></i> Arid <br>`;	
-	  div.innerHTML += `<i style="background: pink"></i> Hyper-arid <br>`;	
+      div.innerHTML += `<i style="background: #1f78b4"></i> one rainy season <br>`;		
+      div.innerHTML += `<i style="background: #33a02c"></i> Two rainy seasons<br>`;
+      div.innerHTML += `<i style="background: #6a3d9a"></i> Three rainy seasons<br>`;
+	  div.innerHTML += `<i style="background: #fdbf6f"></i> Semi-arid <br>`;		
+	  div.innerHTML += `<i style="background: #ff7f00"></i> Arid <br>`;	
+	  div.innerHTML += `<i style="background: #e31a1c"></i> Hyper-arid <br>`;	
         } else {
           for (let i = 1; i <= 12; i++) {
             div.innerHTML += `<i style="background: ${monthColors[i - 1]}"></i> ${i}<br>`;
