--- a/Season/index2.html
+++ b/Season/index2.html
@@ -102,8 +102,8 @@
         else if (value === 'Two rainy seasons') return '#33a02c';		
         else if (value === 'Three rainy seasons') return '#6a3d9a';
 	else if (value === 'Semi-arid') return '#fdbf6f';
-	else if (value === 'Arid') return '#fdbf6f';    
-	else if (value === 'Hyper-arid') return '#fdbf6f';
+	else if (value === 'Arid') return '#ff7f00';    
+	else if (value === 'Hyper-arid') return '#e31a1c';
         else return 'gray';
       } else {
         if (value >= 1 && value <= 12) return monthColors[value - 1];
