--- a/Season/index2.html
+++ b/Season/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Season Attribute Map - Multi GeoJSON</title>
+  <title>Global Mapping of Rainfall Seasonality</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
