--- a/Season/index2.html
+++ b/Season/index2.html
@@ -44,6 +44,16 @@
       margin-right: 8px;
       opacity: 0.7;
     }
+.legend i {
+  float: left;
+  width: 14px;
+  height: 14px;
+  margin-right: 8px;
+}
+
+.legend br {
+  clear: both;
+}
 
     .chart-container {
       width: 500px;
