--- a/CropSuitabilityMap/index.html
+++ b/CropSuitabilityMap/index.html
@@ -113,10 +113,13 @@ html, body {
         <script src="./resources/ol.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
         <script src="resources/photon-geocoder-autocomplete.min.js"></script>
-        <script src="layers/LandCover_1.js"></script><script src="layers/SoilWRB_5.js"></script><script src="layers/SoilProfiles_6.js"></script>
+
+			
+		</script><script src="layers/SoilWRB_5.js"></script><script src="layers/SoilProfiles_6.js"></script>
         <script src="styles/LandCover_1_style.js"></script><script src="styles/SoilWRB_5_style.js"></script><script src="styles/SoilProfiles_6_style.js"></script>
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>        
     </body>
 </html>
+
