--- a/CropSuitabilityMap/index.html
+++ b/CropSuitabilityMap/index.html
@@ -1,125 +1,113 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="stylesheet" href="./resources/ol.css">
-        <link rel="stylesheet" href="resources/fontawesome-all.min.css">
-        <link href="resources/photon-geocoder-autocomplete.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
-        <link rel="stylesheet" href="./resources/qgis2web.css">
-        <style>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
+    <link rel="stylesheet" href="./resources/ol.css">
+    <link rel="stylesheet" href="./resources/fontawesome-all.min.css">
+    <link rel="stylesheet" href="./resources/photon-geocoder-autocomplete.min.css">
+    <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
+    <link rel="stylesheet" href="./resources/qgis2web.css">
+
+    <style>
         html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
             background-color: #ffffff;
         }
+
+        /* Header */
+        #page-header {
+            height: 60px;
+            background: #1f4e79;
+            color: white;
+            padding: 10px 20px;
+            box-sizing: border-box;
+        }
+
+        #page-header h1 {
+            margin: 0;
+            font-size: 18px;
+        }
+
+        #page-header span {
+            font-size: 12px;
+            opacity: 0.9;
+        }
+
+        /* Footer */
+        #page-footer {
+            height: 40px;
+            background: #f4f4f4;
+            color: #333;
+            text-align: center;
+            line-height: 40px;
+            font-size: 12px;
+            border-top: 1px solid #ccc;
+        }
+
+        /* Map */
+        #map {
+            height: calc(100vh - 100px); /* 60 header + 40 footer */
+            width: 100%;
+        }
+
+        /* OpenLayers controls styling */
         .ol-control > * {
             background-color: #f8f8f8!important;
-            color: #444444!important;
-            border-radius: 0px;
+            color: #444!important;
+            border-radius: 0;
         }
-        .ol-attribution a, .gcd-gl-input::placeholder, .search-layer-input-search::placeholder {
-            color: #444444!important;
-        }
-        .search-layer-input-search {
-            background-color: #f8f8f8!important;
-        }
-        .ol-control > *:focus, .ol-control >*:hover {
-            background-color: rgba(248, 248, 248, 0.7)!important;
-        } 
-        .ol-control {
-            background-color: rgba(255,255,255,.4) !important;
-            padding: 2px !important;
-        } 
-        </style>
+    </style>
 
-<style>
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-}
+    <title>Agricultural Suitability Map</title>
+</head>
 
-/* Header */
-#page-header {
-    height: 60px;
-    background: #1f4e79;
-    color: white;
-    padding: 10px 20px;
-    box-sizing: border-box;
-}
+<body>
 
-#page-header h1 {
-    margin: 0;
-    font-size: 18px;
-}
+<!-- Header -->
+<header id="page-header">
+    <h1>Agricultural Suitability Map – ATP</h1>
+    <span>Crop Suitability Map</span>
+</header>
 
-#page-header span {
-    font-size: 12px;
-    opacity: 0.9;
-}
+<!-- Map -->
+<div id="map">
+    <div id="popup" class="ol-popup">
+        <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+        <div id="popup-content"></div>
+    </div>
+</div>
 
-/* Footer */
-#page-footer {
-    height: 40px;
-    background: #f4f4f4;
-    color: #333;
-    text-align: center;
-    line-height: 40px;
-    font-size: 12px;
-    border-top: 1px solid #ccc;
-}
+<!-- Footer -->
+<footer id="page-footer">
+    © 2025 | Data source: Ministry of Agriculture | Map: IWMI
+</footer>
 
-/* Map takes remaining height */
-#map {
-    height: calc(100vh - 100px); /* header (60) + footer (40) */
-    width: 100%;
-}
-</style>
+<!-- Scripts -->
+<script src="./resources/qgis2web_expressions.js"></script>
+<script src="./resources/functions.js"></script>
+<script src="./resources/ol.js"></script>
+<script src="./resources/ol-layerswitcher.js"></script>
+<script src="./resources/photon-geocoder-autocomplete.min.js"></script>
 
-        <title></title>
-    </head>
-    <body>
-	<body>
-    <!-- Header -->
-    <header id="page-header">
-        <h1>Agricultural Suitability Map – ATP</h1>
-        <span>Crop Sutiability Map</span>
-    </header>
+<script src="layers/LandCover_1.js"></script>
+<script src="layers/SoilWRB_5.js"></script>
+<script src="layers/SoilProfiles_6.js"></script>
 
-    <!-- Map -->
-    <div id="map"></div>
+<script src="styles/LandCover_1_style.js"></script>
+<script src="styles/SoilWRB_5_style.js"></script>
+<script src="styles/SoilProfiles_6_style.js"></script>
 
-    <!-- Footer -->
-    <footer id="page-footer">
-        © 2025 | Data source: Ministry of Agriculture | Map: IWMI
-    </footer>
+<script src="./layers/layers.js"></script>
+<script src="./resources/Autolinker.min.js"></script>
+<script src="./resources/qgis2web.js"></script>
 
-    <!-- Scripts stay exactly the same -->
-    ...
 </body>
-
-        <div id="map">
-            <div id="popup" class="ol-popup">
-                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
-                <div id="popup-content"></div>
-            </div>
-        </div>
-        <script src="resources/qgis2web_expressions.js"></script>
-        <script src="./resources/functions.js"></script>
-        <script src="./resources/ol.js"></script>
-        <script src="./resources/ol-layerswitcher.js"></script>
-        <script src="resources/photon-geocoder-autocomplete.min.js"></script>
-
-			
-		</script><script src="layers/SoilWRB_5.js"></script><script src="layers/SoilProfiles_6.js"></script>
-        <script src="styles/LandCover_1_style.js"></script><script src="styles/SoilWRB_5_style.js"></script><script src="styles/SoilProfiles_6_style.js"></script>
-        <script src="./layers/layers.js" type="text/javascript"></script> 
-        <script src="./resources/Autolinker.min.js"></script>
-        <script src="./resources/qgis2web.js"></script>        
-    </body>
 </html>
-
