--- a/LK_Watershed/index.html
+++ b/LK_Watershed/index.html
@@ -57,8 +57,8 @@
         <script src="./resources/ol.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
         <script src="resources/photon-geocoder-autocomplete.min.js"></script>
-        <script src="layers/Level3_1.js"></script><script src="layers/Level4_2.js"></script><script src="layers/Level5_3.js"></script><script src="layers/Level6_4.js"></script><script src="layers/Level7_5.js"></script><script src="layers/Level8_6.js"></script><script src="layers/Level9_7.js"></script><script src="layers/Drainages_8.js"></script>
-        <script src="styles/Level3_1_style.js"></script><script src="styles/Level4_2_style.js"></script><script src="styles/Level5_3_style.js"></script><script src="styles/Level6_4_style.js"></script><script src="styles/Level7_5_style.js"></script><script src="styles/Level8_6_style.js"></script><script src="styles/Level9_7_style.js"></script><script src="styles/Drainages_8_style.js"></script>
+        <script src="layers/Level4_1.js"></script><script src="layers/Level5_2.js"></script><script src="layers/Level6_3.js"></script><script src="layers/Level7_4.js"></script><script src="layers/Level8_5.js"></script><script src="layers/Level9_6.js"></script><script src="layers/Drainages_7.js"></script>
+        <script src="styles/Level4_1_style.js"></script><script src="styles/Level5_2_style.js"></script><script src="styles/Level6_3_style.js"></script><script src="styles/Level7_4_style.js"></script><script src="styles/Level8_5_style.js"></script><script src="styles/Level9_6_style.js"></script><script src="styles/Drainages_7_style.js"></script>
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>        
